; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/mediatek/mt7601u/extr_usb.c_mt7601u_rr.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/mediatek/mt7601u/extr_usb.c_mt7601u_rr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mt7601u_dev = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mt7601u_rr(%struct.mt7601u_dev* %0, i32 %1) #0 {
  %3 = alloca %struct.mt7601u_dev*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.mt7601u_dev* %0, %struct.mt7601u_dev** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.mt7601u_dev*, %struct.mt7601u_dev** %3, align 8
  %7 = getelementptr inbounds %struct.mt7601u_dev, %struct.mt7601u_dev* %6, i32 0, i32 0
  %8 = call i32 @mutex_lock(i32* %7)
  %9 = load %struct.mt7601u_dev*, %struct.mt7601u_dev** %3, align 8
  %10 = load i32, i32* %4, align 4
  %11 = call i32 @__mt7601u_rr(%struct.mt7601u_dev* %9, i32 %10)
  store i32 %11, i32* %5, align 4
  %12 = load %struct.mt7601u_dev*, %struct.mt7601u_dev** %3, align 8
  %13 = getelementptr inbounds %struct.mt7601u_dev, %struct.mt7601u_dev* %12, i32 0, i32 0
  %14 = call i32 @mutex_unlock(i32* %13)
  %15 = load i32, i32* %5, align 4
  ret i32 %15
}

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @__mt7601u_rr(%struct.mt7601u_dev*, i32) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
